--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -34,6 +34,8 @@ sky:
     # 设置jwt签名加密时使用的秘钥
     admin-secret-key: itcast
     # 设置jwt过期时间
-    admin-ttl: 7200000
+#    admin-ttl: 7200000 2小时
+    #Todo 以下先设置长时间
+    admin-ttl: 9999999999
     # 设置前端传递过来的令牌名称
     admin-token-name: token
