--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 1234
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tSi6aN1w3jVcT2kANgd
+    access-key-secret: WGpcbmKMbjkzaPZUGBP9VcH9OKC1S4
+    bucket-name: java-sky-jaymr
